# SerovarClassification

./: .gitignore  Dockerfile  README.md  pyproject.toml
data/prepared_data/: six_classes_nutrient_profile_data.csv
data/raw_data/: seif_metadata.xlsx
inference/: predict.py  request_profile.csv  test_prediction_request.py
notebooks/: Serovar_multiclass_classification.ipynb
training/: config.py  ml_utils.py  train.py
